// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput props: getTheme: width:100,margin:10, 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c1 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  color: #363B40;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  padding-right: 0;
}

.c3 {
  height: 100%;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c6 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c4 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="default"
    style={
      Object {
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "0.6rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <span
    className="c2"
    style={
      Object {
        "fontSize": "1.4rem",
      }
    }
  >
    <div
      className="c3"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderLeftColor": "#cccccc",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "cursor": "pointer",
          "width": "2.2rem",
        }
      }
    >
      <span
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_up   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
      <span
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_down   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
    </div>
  </span>
</div>
`;

exports[`NumberInput props: null 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c1 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  color: #363B40;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  padding-right: 0;
}

.c3 {
  height: 100%;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c6 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c4 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="default"
    style={
      Object {
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "0.6rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <span
    className="c2"
    style={
      Object {
        "fontSize": "1.4rem",
      }
    }
  >
    <div
      className="c3"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderLeftColor": "#cccccc",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "cursor": "pointer",
          "width": "2.2rem",
        }
      }
    >
      <span
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_up   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
      <span
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_down   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
    </div>
  </span>
</div>
`;

exports[`NumberInput props: placeholder  1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c1 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  color: #363B40;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  padding-right: 0;
}

.c3 {
  height: 100%;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c6 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c4 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    placeholder="请填写内容"
    size="default"
    style={
      Object {
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "0.6rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <span
    className="c2"
    style={
      Object {
        "fontSize": "1.4rem",
      }
    }
  >
    <div
      className="c3"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderLeftColor": "#cccccc",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "cursor": "pointer",
          "width": "2.2rem",
        }
      }
    >
      <span
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_up   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
      <span
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_down   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
    </div>
  </span>
</div>
`;

exports[`NumberInput props: placeholder  2`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c1 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  color: #363B40;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  padding-right: 0;
}

.c3 {
  height: 100%;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c6 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c4 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "3.2rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    placeholder=""
    size="default"
    style={
      Object {
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "0.6rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <span
    className="c2"
    style={
      Object {
        "fontSize": "1.4rem",
      }
    }
  >
    <div
      className="c3"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderLeftColor": "#cccccc",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "cursor": "pointer",
          "width": "2.2rem",
        }
      }
    >
      <span
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_up   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
      <span
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_down   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
    </div>
  </span>
</div>
`;

exports[`NumberInput props: size 1`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c1 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.2rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  color: #363B40;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  padding-right: 0;
}

.c3 {
  height: 100%;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c6 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c4 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "2.4rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="small"
    style={
      Object {
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.2rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "0.6rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <span
    className="c2"
    style={
      Object {
        "fontSize": "1.2rem",
      }
    }
  >
    <div
      className="c3"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderLeftColor": "#cccccc",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "cursor": "pointer",
          "width": "2.2rem",
        }
      }
    >
      <span
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_up   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1rem",
            }
          }
        />
      </span>
      <span
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_down   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1rem",
            }
          }
        />
      </span>
    </div>
  </span>
</div>
`;

exports[`NumberInput props: size 2`] = `
.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c1 {
  background-color: transparent;
  box-sizing: border-box;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  height: 100%;
  width: 100%;
  border: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: text;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::-moz-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c1::placeholder {
  color: #cccccc;
  font-size: 1.4rem;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  min-width: 3rem;
  width: 100%;
  background-color: white;
}

.c2 {
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 1rem;
  color: #363B40;
  opacity: 0;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  padding-right: 0;
}

.c3 {
  height: 100%;
  -webkit-transition: all 0.3s linear 0.1s;
  -webkit-transition: all 0.3s linear 0.1s;
  transition: all 0.3s linear 0.1s;
  box-sizing: border-box;
}

.c6 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  border-top: 0.1rem solid #cccccc;
  height: 50%;
  cursor: pointer;
}

.c4 {
  text-align: center;
  color: rgba(0,0,0,0.45);
  position: relative;
  -webkit-transition: all pointer 0.1s linear;
  transition: all pointer 0.1s linear;
  display: block;
  width: 100%;
  font-weight: bold;
  height: 50%;
  cursor: pointer;
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "borderBottomColor": "#cccccc",
      "borderBottomLeftRadius": "0.4rem",
      "borderBottomRightRadius": "0.4rem",
      "borderBottomStyle": "solid",
      "borderBottomWidth": "0.1rem",
      "borderLeftColor": "#cccccc",
      "borderLeftStyle": "solid",
      "borderLeftWidth": "0.1rem",
      "borderRightColor": "#cccccc",
      "borderRightStyle": "solid",
      "borderRightWidth": "0.1rem",
      "borderTopColor": "#cccccc",
      "borderTopLeftRadius": "0.4rem",
      "borderTopRightRadius": "0.4rem",
      "borderTopStyle": "solid",
      "borderTopWidth": "0.1rem",
      "height": "4rem",
    }
  }
>
  <input
    autoFocus={false}
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    size="large"
    style={
      Object {
        "borderBottomLeftRadius": "0.4rem",
        "borderBottomRightRadius": "0.4rem",
        "borderTopLeftRadius": "0.4rem",
        "borderTopRightRadius": "0.4rem",
        "color": "#363B40",
        "fontSize": "1.4rem",
        "paddingBottom": "0rem",
        "paddingLeft": "1rem",
        "paddingRight": "0.6rem",
        "paddingTop": "0rem",
      }
    }
    type="text"
    value=""
  />
  <span
    className="c2"
    style={
      Object {
        "fontSize": "1.4rem",
      }
    }
  >
    <div
      className="c3"
      disabled={false}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "borderLeftColor": "#cccccc",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "0.1rem",
          "cursor": "pointer",
          "width": "2.2rem",
        }
      }
    >
      <span
        className="c4"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_up   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
      <span
        className="c6"
        disabled={false}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        style={Object {}}
      >
        <i
          className="lugia-icon-direction_down   c5"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#9EA4AE",
              "cursor": "pointer",
              "fontSize": "1.2rem",
            }
          }
        />
      </span>
    </div>
  </span>
</div>
`;
